--- a/LoanCalculator/FrmHome.resx
+++ b/LoanCalculator/FrmHome.resx
@@ -58,47 +58,62 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing.Common" name="System.Drawing.Common, Version=4.0.2.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
-  <data name="BtnCalculate.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="PbxClose.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAALAAAACwARRqq2kAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAADsUlEQVRIS52V608TWRjGSfTDfvMP8aNfzK6JGHEVDRrU6mq1VVzBazUqGnQxGnU1yy5xk03cSDTR
-        lRK80JZSkNaCtIAUKFRoSy9MW9YypS1jy6VUo/Zx5nSkTO0Q9EmepDPT8/zmvO85Z/KWoo+DJ+J4VQzi
-        np1I9UqFtvySfqbfCKjz8d721z5+6NL0yVqa/AJIjGkx9TYgNONjwbsAwyZAlY9E/41KfmhGkOQtoytL
-        ZqZvHQfnKdaBizJ4z+9FyiMHRnYTwDv3P0gE9UL/30RmBmOhOMCp2F7MBTPXyxCsPIA3l+ToP1KEnsOb
-        kaKOsJCD+DioWNydcqR0hZiz/X2Gj81oSCEp5QAU+8YP1q0UODEVRnIu9nVpssxEKEwEXYiERgv52Iw4
-        wEyVAr4L0pwAt8uGxoaHiIY8OcNnaCti9JA4wHNBfi559zdEbh7PCaDHKXR1NMFuM2HE3o0AZRMAPphO
-        I2m5IQ7wXzp4mQNM/qHICfBTTjzX1UPf8gQvWhsw0NcmAEyH7WBox/cDErMMohNeQWi2ufJ9N8Bp78Nj
-        ZQ0itDtneHLoX8TtdeIAV4X8POkBu5LEAJpnD/Gs/j7qa2vQYdRkAe4gPlwrDiDL9M/MKlIf2w3D7+V4
-        frcKsegYpqdodvAIIuNuUgomSgkAsaiPhC8OWLAP+puUcNktMLQ8Bv3GAc9IL4z6BkyGc/fBNx5AYGyR
-        HthP7TicBqRn8AXw8oWKAMao1zC3N8Lt7IXPY0WIvbcQINfM4qLhrTjAdGjjlokrv6K/rEgA6GjTEIBz
-        uBta1X+kD6qnD9Btbp4PjzMB2Lw+eP1eccBL2c+F3MFmkm8QANoN6RksfNtsM+HR+fp/M0DPbq7kYAVS
-        wyUAJRU45Zbhk7UMqdYipLQb5j03WF3Ox2aUCzBs64RO8wgRvwkzoQ4kaLXAsyE9pse7EHfUCcxQXTv4
-        2IyyARatkj17dATAlYjbYFxzObsdPXC+7sKoq4+9HiBleToQRLsjsPQSmdWP0MJCOEAo6CQHXHNjHbGu
-        UYlmTS1rJdr0KhJ6tjWGanOE/J4MOwv42IyyAQ23r7FhteyOVSM+6c/Z3GgovWoWOky7ZgH/D3xsRtmA
-        Wz+tRNXW9ag5eQD3TpUIfOeQBNXFBdBXlMBcIUPn1ZOOWNS/Nhwe/RHAcj5SqHZpwWoOYD+9k3wqLaWb
-        YZStg3F/vqjb9q+FUboGGskaLR+zuNhN5vCU7yEf+qWY+6/16LaoQbJqBR+Rpby8z9AOcmdnrb9MAAAA
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        rQAAAK0BVE7WMAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAIaSURBVEhL3ZVb
+        TxNBFMf7JTT6DYgxRgEbbltaCNRi6XRbF0Wa0MtCKo1fR9QHY/gG+OKLJoJ4QZ+9JZKaSlsKCyxpwqUL
+        DjPdE8dlzm7BR/7J/+Vkzu9kzp456zv/2tSUK1VVeW6MDbzeSd1a3M/GXjb0+BPmHM2rF+HY2VVOBm6U
+        Sc/3Srzvz246ShkQs9XIkad0OnEZ0k6nqhooFEduHpnjQxgUs2FlYyFI99ZaQnm4Eu6gO6kwBvLygaUT
+        BTC4eFuKkc6jjbEBkfhAs+2EucXXaVq7BDhZq6T3R3HETw90Yifk79D6+ze0vrzkhOU1PM49pT4GnFNb
+        avDqSridbt4dBIgNN02z6b8wgEtxUcSiGe0CYIWqCWXu53A73cvAxJwo0IR9fkfrHxedseW38i1yahaw
+        Qquxnm/FiN95ECnyr1E4N9am36NdtVK0Wz7Mi3xYkOHsNiic2dLjLwArVBrtXitFu+SE/ymQU+cBK8Re
+        7Vf2uJyHW7YImSJurEUVtm9afuRPS9Jt8FGNpwErxJdac0zvuY0pfFC3uCiAjylXGSZJfmgnIG5x248A
+        J2tbC163V0VIJHCADHGL1zxXBZeRDBSay27izMtu35pW+wDjrVqif+ZXxH9o3h/GQJg32OwHIf102koO
+        XiuT3i8Vwn44k7cxKLfV0Mlsy7Z4yUgG29ieemZooVf1VGTB/mWSWeaM67ScI/l8x8L1lnsEYugkAAAA
         AElFTkSuQmCC
 </value>
   </data>
   <data name="PbxIcon.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAOsAAADrASts18IAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAADEklEQVRYR72XTUhUURTHXzUjNDgUVAQRNX3Qx0ZclJgVWZYVReDQbhwz2lQQKJnDGEQQyZigRRDY
-        IkrbRK0CyWCkRUUQFBUUifSxiUoLZtGysv//PQ/ded77PmaiP/yYcy7vnnPux7tzn+VSBdgDToEToB7M
-        Bv9F28A78AhcAL3gCXgFcmVyBqwGRnGkX8Au27OsRrDDMa19oADugEyJ9IO3QKso4Mgl+VqQByNAqj5Q
-        GYt8mhxJ9RTyLblwpLvRfw74aUfSaC946Ji2PgBOf1HV8+MVY3d7G6cQNCxM7FkAp6jHMW29B1dA0brF
-        K6MD3cc26BL4EagAbjoRk3aAohmYF4tezR3fqEvgh28BfO0eO6YtmYEB8IYNFJZgfLhvty6BH74FRAA3
-        IfcCxRm4D4bBCjZAyfjc6MeJe6lsYbQlE4p8uhP9PQugtoLPYL/tOX6dY1pJMAFqIhGrAafSuTCg31ng
-        WwC1GYyBp+DiNM/Aa1ADrEsnNw1mD1VPhaGrtfo3ugYqgOKDO8Ev0AZ4QLHNVl977RD3AV/HzuaqQGTS
-        VaEKoIwPH21a3365o+5af1vt9ab6xIMgJLcnRtG1pAKwhNpzPSy+J6Fb8jB/uRRynmddvq7d/Qx9iVVS
-        AWonUxC13dTH1FcrtRM3kEwlj2vV17W7n6FfVgGmJQhii19WAWon1Q9iU+K72z1l6qT6QWxKfHe7p0yd
-        VD+ITYnvbveUqZPqB7Ep+twTR6Z/D4PFwFMSRBfML6lqzwL8J/wBboDz4Cb4DthulARRg1FBkqo234Ln
-        YJXt/dVS8AIYi5AgajAqSFKxF4FvwJ2c4h1jHeBM8LkZkiBqYMovKSV2Kxhkg0sN4CtYBm6BZjBDEkQN
-        TPklpcQ+DXgZoeRWJcm32J5zSmqXQYLw13QU+9n8rhgCKwGTMpGanLoNUo5ZLCmAu1iO1LB0AV7jlgBe
-        7/jVxcuNKAEmwULb00huxjL6UuCNmm/BGhADouXgJeCNyyj5NtCNLgz8wuLoueFYFKedI/dM/q+1ABwE
-        /OTnmivTbll/AKcNTQFrbX4RAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        5wAAAOcB8BtYtQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAMSSURBVFhHvZdN
+        SFRRFMdfNSM0OBRUBBE1fdDHRlyUmBVZlhVF4NBuHDPaVBAomcMYRBDJmKBFENgiSttErQLJYKRFRRAU
+        FRSJ9LGJSgtm0bKy//89D9153vs+ZqI//JhzLu+ec+7Hu3Of5VIF2ANOgROgHswG/0XbwDvwCFwAveAJ
+        eAVyZXIGrAZGcaRfwC7bs6xGsMMxrX2gAO6ATIn0g7dAqyjgyCX5WpAHI0CqPlAZi3yaHEn1FPItuXCk
+        u9F/DvhpR9JoL3jomLY+AE5/UdXz4xVjd3sbpxA0LEzsWQCnqMcxbb0HV0DRusUrowPdxzboEvgRqABu
+        OhGTdoCiGZgXi17NHd+oS+CHbwF87R47pi2ZgQHwhg0UlmB8uG+3LoEfvgVEADch9wLFGbgPhsEKNkDJ
+        +Nzox4l7qWxhtCUTiny6E/09C6C2gs9gv+05fp1jWkkwAWoiEasBp9K5MKDfWeBbALUZjIGn4OI0z8Br
+        UAOsSyc3DWYPVU+Foau1+je6BiqA4oM7wS/QBnhAsc1WX3vtEPcBX8fO5qpAZNJVoQqgjA8fbVrffrmj
+        7lp/W+31pvrEgyAktydG0bWkArCE2nM9LL4noVvyMH+5FHKeZ12+rt39DH2JVVIBaidTELXd1MfUVyu1
+        EzeQTCWPa9XXtbufoV9WAaYlCGKLX1YBaifVD2JT4rvbPWXqpPpBbEp8d7unTJ1UP4hNie9u95Spk+oH
+        sSn63BNHpn8Pg8XAUxJEF8wvqWrPAvwn/AFugPPgJvgO2G6UBFGDUUGSqjbfgudgle391VLwAhiLkCBq
+        MCpIUrEXgW/AnZziHWMd4EzwuRmSIGpgyi8pJXYrGGSDSw3gK1gGboFmMEMSRA1M+SWlxD4NeBmh5FYl
+        ybfYnnNKapdBgvDXdBT72fyuGAIrAZMykZqcug1SjlksKYC7WI7UsHQBXuOWAF7v+NXFy40oASbBQtvT
+        SG7GMvpS4I2ab8EaEAOi5eAl4I3LKPk20I0uDPzC4ui54VgUp50j90z+r7UAHAT85OeaK9NuWX8Apw1N
+        AWttfhEAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="BtnCalculate.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        rAAAAKwBhgk01AAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAOxSURBVEhLnZXr
+        TxNZGMZJ9MN+8w/xo1/MrokYcRUNGtTqarVVXMFrNSoadDEadTXLLnGTTdxINNGVErzQllKQ1oK0gBQo
+        VGhLL0xb1jKlLWPLpVSj9nHmdKRM7RD0SZ6kM9Pz/Oa87zln8paij4Mn4nhVDOKenUj1SoW2/JJ+pt8I
+        qPPx3vbXPn7o0vTJWpr8AkiMaTH1NiA042PBuwDDJkCVj0T/jUp+aEaQ5C2jK0tmpm8dB+cp1oGLMnjP
+        70XKIwdGdhPAO/c/SAT1Qv/fRGYGY6E4wKnYXswFM9fLEKw8gDeX5Og/UoSew5uRoo6wkIP4OKhY3J1y
+        pHSFmLP9fYaPzWhIISnlABT7xg/WrRQ4MRVGci72dWmyzEQoTARdiIRGC/nYjDjATJUCvgvSnAC3y4bG
+        hoeIhjw5w2doK2L0kDjAc0F+Lnn3N0RuHs8JoMcpdHU0wW4zYcTejQBlEwA+mE4jabkhDvBfOniZA0z+
+        ocgJ8FNOPNfVQ9/yBC9aGzDQ1yYATIftYGjH9wMSswyiE15BaLa58n03wGnvw2NlDSK0O2d4cuhfxO11
+        4gBXhfw86QG7ksQAmmcP8az+Pupra9Bh1GQB7iA+XCsOIMv0z8wqUh/bDcPv5Xh+twqx6Bimp2h28Agi
+        425SCiZKCQCxqI+ELw5YsA/6m5Rw2S0wtDwG/cYBz0gvjPoGTIZz98E3HkBgbJEe2E/tOJwGpGfwBfDy
+        hYoAxqjXMLc3wu3shc9jRYi9txAg18ziouGtOMB0aOOWiSu/or+sSADoaNMQgHO4G1rVf6QPqqcP0G1u
+        ng+PMwHYvD54/V5xwEvZz4XcwWaSbxAA2g3pGSx822wz4dH5+n8zQM9uruRgBVLDJQAlFTjlluGTtQyp
+        1iKktBvmPTdYXc7HZpQLMGzrhE7zCBG/CTOhDiRotcCzIT2mx7sQd9QJzFBdO/jYjLIBFq2SPXt0BMCV
+        iNtgXHM5ux09cL7uwqirj70eIGV5OhBEuyOw9BKZ1Y/QwkI4QCjoJAdcc2Mdsa5RiWZNLWsl2vQqEnq2
+        NYZqc4T8ngw7C/jYjLIBDbevsWG17I5VIz7pz9ncaCi9ahY6TLtmAf8PfGxG2YBbP61E1db1qDl5APdO
+        lQh855AE1cUF0FeUwFwhQ+fVk45Y1L82HB79EcByPlKodmnBag5gP72TfCotpZthlK2DcX++qNv2r4VR
+        ugYayRotH7O42E3m8JTvIR/6pZj7r/XotqhBsmoFH5GlvLzP0A5yZ2etv0wAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
